<resources>
    <string name="app_name">iTranslator</string>
    <string name="translate">Translate</string>
    <string name="clear">Clear</string>
    <string name="textInputHint">enter text to be translated</string>
    <string name="targetLanguagePrompt">Pick a target language</string>
    <string name="sourceLanguagePrompt">Pick a source language</string>
    <string name="speechLanguagePrompt">Pick a speech language</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="targetLanguage">Target Language</string>
    <string name="speak">Speak</string>
    <string name="chooseFromGallery">Choose From Gallery</string>
    <string name="takeAPhoto">Take A Photo</string>
    <string name="detectedLanguage">Detected Language</string>
    <string name="sourceLanguage">Source Language</string>
    <string name="translationResult">Translation Result</string>
    <string name="sourceText">Source Text</string>
    <string name="translationScreenHint">type in text, or choose a language and press Speak button for voice input</string>
    <string name="conversationTitle">Conversation</string>
    <string name="speechLang">Speech Language</string>
    <string name="userName">User\'s Name</string>
    <string name="editProfile">Edit Profile</string>
    <string name="userID">User\'s ID</string>
    <string name="defaultSourceLanguage">Source Language</string>
    <string name="speechLanguage">Speech Language</string>
    <string name="profilePage">Profile Page</string>
    <string name="saveProfile">Save Profile</string>
    <string name="shakeToSpeak">Shake To Speak</string>
    <string name="longPressCopy">Long Press Copy</string>
    <string name="logOut">Log Out</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="getCurrentLocation">Get Current Location</string>
    <string name="photoTextTranslation">Photo\'s Text Translation</string>
    <string name="textTranslation">Text Translation</string>
    <string name="translation">Translation</string>
    <string name="conversation">Conversation</string>
    <string name="photo">Photo</string>
    <string name="profile">Profile</string>
    <string name="select_a_photo_for_text_capture_and_translation">Select a photo for text capture and translation</string>
    <string name="placeholder_for_the_photo_to_be_processed">Placeholder for the photo to be processed</string>
    <string name="translationError">That didn\'t work!</string>
</resources>
