<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="com.example.mvp.itranslator.EditProfileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editProfile"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/userName"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editUserName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="textCapWords|textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/sourceLanguage"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sourceLanguageSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:prompt="@string/sourceLanguagePrompt"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/targetLanguage"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/targetLanguageSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:prompt="@string/sourceLanguagePrompt"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/speechLang"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/speechLanguageSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:prompt="@string/sourceLanguagePrompt"
            android:layout_weight="2" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/shakeToSpeakCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shakeToSpeak" />

    <CheckBox
        android:id="@+id/longPressCopyCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/longPressCopy" />


    <Button
        android:id="@+id/saveProfileEditBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/saveProfile" />

</LinearLayout>
