<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="com.example.mvp.itranslator.PhotoTranslateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/inputPhoto"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="3"
            app:srcCompat="@drawable/common_google_signin_btn_icon_light_normal" />

        <ImageButton
            android:id="@+id/getPhotoBtn"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            app:srcCompat="@android:drawable/ic_input_add" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorLightBlue"
            android:text="@string/sourceLanguage"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/photoLanguageDetectedTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/colorLightBlue"
            android:gravity="center_vertical"
            android:text="@string/targetLanguage"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/photoTargetLangSpinnner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>

    </LinearLayout>

    <Button
        android:id="@+id/photoTextTranslateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:layout_gravity="end"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translationResult"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/photoResultTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="translation from photo" />

    <Button
        android:id="@+id/photoSpeakBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/speak" />


</LinearLayout>
