<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context="com.example.mvp.itranslator.TranslateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/speechLang"
                android:background="@color/colorLightBlue"
                android:gravity="center_vertical"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/translateSpeechLangSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:id="@+id/clearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear" />

            <Button
                android:id="@+id/translateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translate" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/textInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/translationScreenHint"
                android:inputType="textMultiLine" />

            <ImageButton
                android:id="@+id/translateSpeakBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                app:srcCompat="@android:drawable/ic_btn_speak_now" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/translateSourceLanguageSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>

            <ImageButton
                android:id="@+id/translateSwapBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:layout_marginHorizontal="5dp"
                app:srcCompat="@mipmap/swap_icon" />

            <Spinner
                android:id="@+id/translateTargetLanguageSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/resultTV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingHorizontal="5dp"
                android:background="@color/colorLightBlue"
                android:layout_weight="4"/>

            <ImageButton
                android:id="@+id/translatedSpeakBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/speaker_icon" />

        </LinearLayout>

        <TextView
            android:id="@+id/translateSpeakErrorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark" />



    </LinearLayout>


</ScrollView>
